# pythonQLaity

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dev.sh  manage_packages  pyproject.toml  setup.cfg  setup.py  tox.ini
clean-code-sentinel/src/code_sentinel/: __init__.py
clean-code-sentinel/src/code_sentinel/config/: default.yml
clean-code-sentinel/src/code_sentinel/tools/: analysis_tool.py
code-sentinel/: README.md  setup.py
code-sentinel/cli/: main.py
code-sentinel/cli/commands/: analyze.py
code-sentinel/config/: defaults.yaml
code-sentinel/core/extractors/: base_extractor.py  python_extractor.py
code-sentinel/core/query/: query_executor.py  query_optimizer.py  query_parser.py
code-sentinel/tests/unit/core/: test_extractors.py  test_query.py
code-sentinel/tools/: analysis_tool.py
core/extractors/: base_extractor.py
ql/: computer-interactions.ql  qlpack.yml
references/anthropic-quickstarts/computer-use-demo/: Dockerfile  requirements.txt
references/anthropic-quickstarts/computer-use-demo/computer_use_demo/: loop.py
src/anthropic/: .flake8  __init__.py
src/anthropic/cli/: main.py
src/anthropic/cli/commands/: __init__.py  analyze.py  metrics.py  query.py
src/anthropic/config/: defaults.yaml  project_config.py  schema.json
src/anthropic/core/: git-error-1736544901418  loop.py
src/anthropic/core/computer/: __init__.py  (+2 more)
src/anthropic/interfaces/: streamlit_app.py
src/anthropic/tools/: __init__.py  analysis.py  analysis_tool.mojo  base.py  computer.py  edit.py  logger_tool.mojo  run.py
tools/: fix_yaml.py
(+27 files in other folders)
